testing/demo.mjs
"use strict";

/**
 *
 * @author xgqfrms
 * @license MIT
 * @copyright xgqfrms
 *
 * @description demo
 * @augments
 * @example
 * @link
 *
 */

/*

import PORT_ENV from "./env.js";

console.log('PORT_ENV =', PORT_ENV);

// SyntaxError: Unexpected token 'export'

*/

import PORT_ENV from "./env.mjs";
console.log('PORT_ENV =', PORT_ENV);


/*

// ExperimentalWarning: The ESM module loader is experimental.
PORT_ENV = 666

*/
